--- a/index.html
+++ b/index.html
@@ -3,29 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JukeBoXT - Web Jukebox</title>
+    <title>JukeBoXT</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<div class="jukebox">
-    <h1>JukeBoXT 🎵</h1>
-    <div class="track-info">
-        <img id="album-art" src="assets/default-cover.jpg" alt="Album Cover">
-        <h2 id="track-title">Track Name</h2>
-        <p id="track-artist">Artist Name</p>
+    <div class="logo">
+        <img src="assets/JukeBoXT_Logo.png" alt="JukeBoXT Logo" style="width:89px;height:89px;">
     </div>
 
-    <div class="controls">
-        <button id="prev">⏮️</button>
-        <button id="play">▶️</button>
-        <button id="pause">⏸️</button>
-        <button id="next">⏭️</button>
+    <header>
+        <h1>JukeBoXT</h1>
+    </header>
+
+    <div class="jukebox">
+        <div class="track-info">
+            <img id="album-art" src="assets/scratch.png" alt="Album Cover">
+            <h2 id="track-title">Track Name</h2>
+            <p id="track-artist">Artist Name</p>
+        </div>
+
+        <div class="controls">
+            <button id="prev">⏮️</button>
+            <button id="play">▶️</button>
+            <button id="pause">⏸️</button>
+            <button id="next">⏭️</button>
+        </div>
+
+        <label for="volume">Volume:</label>
+        <input type="range" id="volume" min="0" max="1" step="0.1">
     </div>
 
-    <label for="volume">Volume:</label>
-    <input type="range" id="volume" min="0" max="1" step="0.1">
-</div>
+    <footer>
+        <p>Copyright © 2025 Vaishnavi Gudimella. All Rights Reserved.</p>
+    </footer>
 
 <script src="app.js"></script>
 </body>
